# blog

./: .gitignore  index.html  publish.sh  theblog.cabal  theblog.hs
templates/: footer.html  head.html  post.html
